# guac

./: .gitignore  Cargo.toml  README.md  bacon.toml
proptest-regressions/tests/: ops.txt
src/: args.rs  config.rs  error.rs  keys.txt  main.rs  message.rs  mode.rs  radix.rs  real.rs  util.rs
src/cmd/: mod.rs
src/expr/: add.rs  cast.rs  constant.rs  display.rs  mod.rs  mul.rs  ops.rs  simplify.rs  terms.rs  trig.rs
src/expr/display/: latex.rs
src/mode/: cmd.rs  mod.rs  normal.rs  pipe.rs
src/tests/: mod.rs  mul.rs  ops.rs
