[package]
name = "guac"
version = "0.2.0-2"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2021"
license = "Unlicense"
description = "a minimal TUI RPN calculator with a basic knowledge of algebra"
documentation = "https://github.com/jacobhenn/guac/wiki"
repository = "https://github.com/jacobhenn/guac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = "0.23"
colored = "2"
argh = "0.1"
num = "0.4"

[dev-dependencies]
rand = "0.8"

[dev-dependencies.num]
version = "0.4"
features = ["rand"]

[profile.dev]
opt-level = "z"
