[package]
name = "guac"
version = "0.3.0-alpha"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2021"
license = "Unlicense"
description = "a minimal TUI RPN calculator with a basic knowledge of algebra"
documentation = "https://github.com/jacobhenn/guac/wiki"
repository = "https://github.com/jacobhenn/guac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = "0.23"
colored = "2"
argh = "0.1"
num = "0.4"
derive_more = "0.99"
proptest-derive = "0.3"
thiserror = "1"
toml = "0.5"
serde_with = "2.1.0"
dirs = "4.0.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.arboard]
version = "3"
default-features = false
features = []

[dev-dependencies.proptest]
version = "1"

[profile.release]
debug = 1

[profile.dev]
opt-level = "s"
